Add "isLeaderEligible" for node #330